mod: 챌린지 응답 필드 수정